Update payment  maintenance request
-Thêm chức năng đặt cọc bảo trì và thanh xong phần còn lại sau khi bảo trì xong
-Thêm các trạng thái khi thanh toán
-Thanh toán vnpay hoặc tiền mặt